--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -8,11 +8,14 @@
         android:minSdkVersion="16"
         android:targetSdkVersion="19" />
 
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
             android:name="com.punventure.punadventure.NoteListActivity"
             android:label="@string/app_name" >
@@ -30,6 +33,9 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.punventure.punadventure.NoteListActivity" />
         </activity>
+        <service android:name="com.punventure.punadventure.LocationService" android:exported="false" />
+        <service android:name="com.punventure.punadventure.NoteRetrievalService" android:exported="false" />
+        
     </application>
 
 </manifest>
