--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme" >
         <activity
             android:name="com.punventure.punadventure.NoteListActivity"
             android:label="@string/app_name" >
@@ -33,9 +33,18 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.punventure.punadventure.NoteListActivity" />
         </activity>
-        <service android:name="com.punventure.punadventure.LocationService" android:exported="false" />
-        <service android:name="com.punventure.punadventure.NoteRetrievalService" android:exported="false" />
-        
+
+        <service
+            android:name="com.punventure.punadventure.LocationService"
+            android:exported="false" />
+        <service
+            android:name="com.punventure.punadventure.NoteRetrievalService"
+            android:exported="false" />
+
+        <activity
+            android:name="com.punventure.punadventure.WelcomeActivity"
+            android:label="@string/title_activity_welcome" >
+        </activity>
     </application>
 
 </manifest>
