--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -12,7 +12,6 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    
 
     <application
         android:allowBackup="true"
@@ -51,6 +50,10 @@
         <activity
             android:name="com.punventure.punadventure.VoiceRecordActivity"
             android:label="@string/title_activity_voice_record" >
+        </activity>
+        <activity
+            android:name="com.punventure.punadventure.AddNoteActivity"
+            android:label="@string/title_activity_add_note" >
         </activity>
     </application>
 
